# pyscf

./: .gitignore  AGENTS.md
doc/: CPU_benchmark.md  CPU_optimixation_experience.md  CPU_small_DFT.chat.md  GPU_1650_lessons_2026-07-17.md  GPU_benchmark.md  GPU_benchmark_1650.md  GPU_optimixation_experience.md  GPU_screened_splitk_2026-07-17.md  GPU_smallDFT_optimization.chat.md  OpenCL_XC_execution.md  OpenCL_rho_vmat_how_it_works.md  Optimization_guidelines.md  README.md  ToOpenCL.chat.md  acceptance_2026-07-11.md  df_storage_and_benchmark_hygiene.md  dft_profiling_results.md  dimer_scan_benchmarks.md  low_rank_perturbation.md  opencl-kernel-cookbook.md  opencl-xc-developer-guide.md  opencl_gpu_paths_cookbook.md  opencl_rho_precomp_layout.md  opencl_xc_architecture.md  quintic_hermite_spline.md  rho_vmat_vxc_GPU_optimization.report.md  smallDFT_cpu_path.md  speedup_dft_small.chat.md  topical_audit.md  vmat_optimization_report.md
expamples_prokop/: README.md  dimer_scan_frames.py  hermite_radial_study.py  plot_ao_deriv_debug.py  plot_ao_deriv_detail.py  plot_carbon_radial_map_b.py  plot_gpu_scf_amdahl.py  plot_h2o_dimer_scan_energy.py  plot_hermite_cubic_quintic.py  plot_scan_ez.py  profile_amdahl_budget.py  profile_dft.py  profile_dimer_scan.py  profile_formic_dimer_scan.py  profile_gpu_amdahl_strict.py  profile_gpu_scf.py  profile_h2o_dimer_scan.py  profile_scf_cycle.py  profile_xc_paths_single.py  profile_xc_stages_benzene.py  sweep_opencl_tiles.py  test_opencl.py  (+17 more)
pyscf/lib/smalldft/: CMakeLists.txt  README.md  build.sh  small_grid.c  small_grid.h  stream_grid.c
(+62 files in other folders)
